# Super-AI-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
01_projects/runtime_mvp/: README.md  pyproject.toml
01_projects/runtime_mvp/tests/: test_agent_os_approval_substrate.py  test_agent_os_command_center.py  test_agent_os_guard_integrated_command_center_gate.py  test_agent_os_local_model_worker.py  test_agent_os_sandboxed_local_agent_runner.py  test_agent_os_swarm_coordinator.py  test_n4_1_runtime_reliability.py  test_n4_2a_local_memory_intake.py  test_n4_3a_supervised_content_studio_demo.py  test_n4_4a_desktop_operator_control_plane.py  test_n4_4b_desktop_operator_dashboard_action_center.py  test_n4_4c_desktop_operator_recipe_runner_preview_polish.py  test_n4_4d_preview_path_containment_fix.py  test_n4_5a_parallel_agent_relay_command_center.py  test_n4_6a_productized_dashboard_control_center_usability.py  test_n4_7a_one_command_product_launcher_demo_smoke.py  test_n4_8a_external_tool_sandbox_adapter_discovery.py  test_n4_9a_first_approved_adapter_execution_demo.py  test_n5_0a_ui_tars_observation_only_adapter.py  test_n5_1a_public_github_readiness_image_backed_presentation.py  test_n5_2a_hermes_local_bootstrap_public_readiness_model_provider.py  test_n5_3a_full_product_finish_local_agent_control_center.py  test_n5_4a_first_real_operator_usability_pass.py  test_n5_5a_local_memory_context_pack.py  test_n5_6a_local_model_easy_worker_lane.py  test_n5_7a_repo_knowledge_map.py  test_n5_8a_hermes_agent_manual_bridge.py  (+50 more)
(+1681 files in other folders)
