[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "super-ai-agent-runtime-mvp"
version = "0.1.0.dev0"
description = "Minimal local-first runtime sandbox for Super-AI-Agent"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
super-agent = "super_ai_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
